terraform/modules/securitygroup/main.tf
# security group for alb
# 기본적으로 80, 443 포트 허용
resource "aws_security_group" "alb" {
  name   = "${var.name}-sg-alb-${var.environment}"
  vpc_id = var.vpc_id

  ingress {
    protocol         = "tcp"
    from_port        = 80
    to_port          = 80
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    protocol         = "tcp"
    from_port        = 443
    to_port          = 443
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    protocol         = "-1"
    from_port        = 0
    to_port          = 0
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name        = "${var.name}-sg-alb-${var.environment}"
    Environment = var.environment
  }
}

# security group for ecs 
# alb -> ecs
resource "aws_security_group" "ecs_tasks" {
  name   = "${var.name}-sg-task-${var.environment}"
  vpc_id = var.vpc_id

  # ingress {
  #   protocol         = "tcp"
  #   from_port        = var.container_port
  #   to_port          = var.container_port
  #   cidr_blocks      = ["0.0.0.0/0"]
  #   ipv6_cidr_blocks = ["::/0"]
  # }

  ingress {
    protocol        = "-1"
    from_port       = 0 
    to_port         = 0
    security_groups = [aws_security_group.alb.id]
  }

  egress {
    protocol         = "-1"
    from_port        = 0
    to_port          = 0
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name        = "${var.name}-sg-task-${var.environment}"
    Environment = var.environment
  }
}

# security group for rds
resource "aws_security_group" "rds" {
  name            = "${var.name}-sg-rds-${var.environment}"
  description     = "RDS Allowed Ports"
  vpc_id          = var.vpc_id

  egress {
    from_port     = 0
    to_port       = 0
    protocol      = "-1"
    cidr_blocks   = [ "0.0.0.0/0" ]
  } 

  ingress {
    protocol          = "tcp"
    from_port         = var.rds_port
    to_port           = var.rds_port
    security_groups   = [aws_security_group.ecs_tasks.id]
  }

  tags = {
    Name        = "${var.name}-sg-rds-${var.environment}"
    Environment = var.environment
  }
}

# security gorup for elasitcache
resource "aws_security_group" "elasticache" {
  name            = "${var.name}-sg-elasticache-${var.environment}"
  vpc_id          = var.vpc_id

  ingress {
    from_port     = 1
    to_port       = var.elasticache_port
    protocol      = "tcp"
    cidr_blocks   = ["0.0.0.0/0"]
  }

  egress {
    from_port     = 0
    to_port       = 0
    protocol      = "-1"
    cidr_blocks   = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${var.name}-sg-elasticache-${var.environment}"
    Environment = var.environment
  }
}

output "alb" {
  value = aws_security_group.alb.id
}

output "ecs_tasks" {
  value = aws_security_group.ecs_tasks.id
}

output "rds" {
  value = aws_security_group.rds.id
}

output "elasticache" {
  value = aws_security_group.elasticache.id
}
